Made the homepage illustrations max-width 100% cause they were causing scroll issues on mobile

--- a/docs/src/scss/custom/_custom.scss
+++ b/docs/src/scss/custom/_custom.scss
@@ -357,6 +357,7 @@ body {
 .feature-ill {
   svg {
     display: block;
+    max-width: 100%;
     margin: 1rem auto;
   }
 }
